# ribo_agent

./: .gitignore  CHANGELOG.md  CODEOWNERS  EVIDENCE_CHAT_README.md  LICENSE  Makefile  PLAN.md  README.md  chat_explorer.py  eval_log.txt  explorer.py  pyproject.toml  run_full_eval.py
.github/: dependabot.yml
.github/workflows/: ci.yml
adapters/: README.md  adapter_config.json
configs/: v0_baseline.yaml  v0_rag_qwen25_7b.yaml  v0_zeroshot_claude_opus.yaml  v0_zeroshot_claude_sonnet4.yaml  v0_zeroshot_deepseek_r1_7b.yaml  v0_zeroshot_gemma3_12b.yaml  v0_zeroshot_gpt4o.yaml  v0_zeroshot_llama31_8b.yaml  v0_zeroshot_phi35.yaml  v0_zeroshot_phi4_mini.yaml  v0_zeroshot_qwen25_7b.yaml  v0_zeroshot_qwen3_8b.yaml  v1_rag_finetuned.yaml  v1_rag_hybrid.yaml  v1_wiki_opus.yaml  v2_rewrite_wiki_opus.yaml  v3_ensemble_opus.yaml  v4_multistep_opus.yaml
data/qlora/: train.jsonl  valid.jsonl
data/raw/study/: Ontario Regulation 989.doc  (+3 more)
deployment/: deploy.py  environment.yml  score.py
docs/: EDA.md  ERROR_ANALYSIS.md  LITERATURE.md  MID_SUBMISSION_REPORT.md  MODELS.md  QLORA_ANALYSIS.md  REPRODUCE.md  ROOT_CAUSE_ANALYSIS.md  TECHNICAL_DEEP_DIVE.md  VOTING_ANALYSIS.md  generate_analysis.py  generate_report.py
notebooks/: day1_eda.py
results/: LEADERBOARD.md
scripts/: model_sweep.sh
src/ribo_agent/: __init__.py  app.py  chat.py
tests/: conftest.py  test_agent_and_metrics.py  test_compare_leaderboard.py  test_faithfulness.py  test_kb_chunker.py  test_llm_factory.py  test_manual_parser.py  test_practice_parser.py  test_sample_parser.py  test_storage.py
(+41 files in other folders)
